# ECS

./: .gitignore  CMakeLists.txt  CMakeLists_TEST.txt  DoxygenLists.txt  PreLoad.cmake  README.md  build.ps1  build.sh
docs/: Doxyfile.in
source/components/: IComponent.hpp
source/config/: Config.hpp  Config.hpp.in
source/datastruct/: Datastruct.cpp  Datastruct.hpp
source/ecs/component/: Component.cpp  Component.hpp
source/ecs/component/transform/: Transform.hpp
source/ecs/components/: Component.cpp  Component.hpp
source/ecs/entity/: Entity.cpp  Entity.hpp
source/ecs/system/: ComponentMgr.cpp  ComponentMgr.hpp  EntityManager.hpp  EntityMgr.cpp  EntityMgr.hpp  typedef.hpp
source/ecs/system/injector/: Injector.hpp
source/ecs/system/lists/: List.hpp
source/entity/: Entity.cpp  Entity.hpp
source/lists/: List.hpp
source/public/: Public.hpp
source/src/: main.cpp  main2.cpp
source/util/: Logging.cpp  Logging.hpp  Reflection.hpp
